# nibs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml  release.yml
cleaners/: README.md
cleaners/browsers/: chromium.yaml  firefox.yaml  librewolf.yaml  microsoft-edge.yaml  opera.yaml  vivaldi.yaml
cleaners/code-editors/: jetbrains.yaml  sublime-text.yaml  vscode-family.yaml  zed.yaml
cleaners/communication/: element.yaml  microsoft-teams.yaml  signal.yaml  slack.yaml  telegram.yaml  zoom.yaml
cleaners/creative/: blender.yaml  gimp.yaml  inkscape.yaml  kdenlive.yaml  krita.yaml  obs-studio.yaml
cleaners/desktop-apps/: discord.yaml  spotify.yaml
cleaners/dev-ai/: ai-desktop.yaml  antigravity.yaml  claude-code.yaml  gemini-cli.yaml  local-ai-models.yaml  opencode.yaml
cleaners/dev-tools/: android-studio.yaml  cargo.yaml  cloud-cli.yaml  docker-tooling.yaml  javascript-package-managers.yaml  npm.yaml  virtualbox.yaml
cleaners/gaming/: steam.yaml
cleaners/media/: qbittorrent.yaml  transmission.yaml  vlc.yaml
cleaners/productivity/: figma.yaml  thunderbird.yaml
docs/: mascot_animations.md  roadmap.md  rules.md  safety.md  vision.md
rules/: application-caches.yaml  deep-clean.yaml  developer-extras.yaml  go.yaml  java.yaml  linux-cache.yaml  node.yaml  python.yaml  rust.yaml
src/: app.rs  cli.rs  main.rs
src/analyze/: mod.rs  tree.rs  tui.rs
(+26 files in other folders)
