[package]
name = "nibble"
version = "0.1.0"
edition = "2024"
description = "A safe terminal cleaner for Linux developers"
license = "MIT"
readme = "README.md"
keywords = ["linux", "cleanup", "tui", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "nibs"
path = "src/main.rs"

[features]
default = ["tui"]

# Terminal UI — disable for headless/CLI-only builds
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
directories = "6.0.0"
ratatui = { version = "0.30.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trash = "5.2.6"
walkdir = "2.5.0"
